--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.vinay_jadaun_11.Recipeee"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "516da140-4116-45af-bd09-0cf8ab45c314"
+      }
     }
   }
 }
